# burl

./: .drone.star  CMakeLists.txt  README.md
.drone/: drone.bat  drone.sh
.github/workflows/: ci.yml  slodd-notify.yml
cmake/: FindLibpsl.cmake
doc/: antora.yml  build_antora.sh  local-playbook.yml  mrdocs.yml  notes.md  package.json
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: index.adoc
example/: CMakeLists.txt  Jamfile  nlohmann_json.cpp  usage.cpp
include/boost/: burl.hpp
include/boost/burl/: any_request_body.hpp  auth.hpp  client.hpp  connection_pool.hpp  conversion.hpp  cookie.hpp  cookie_jar.hpp  cookies.hpp  error.hpp  file.hpp  fwd.hpp  json.hpp  multipart_form.hpp  options.hpp  request.hpp  request_body.hpp  request_builder.hpp  response.hpp  session.hpp  string.hpp  urlencoded_form.hpp
include/boost/burl/detail/: config.hpp
src/: auth.cpp  client.cpp  connection_pool.cpp  cookie.cpp  cookie_jar.cpp  error.cpp  file.cpp  json.cpp  multipart_form.cpp  request_builder.cpp  response.cpp  session.cpp  string.cpp  urlencoded_form.cpp
src/detail/: base64.cpp  base64.hpp  drain.hpp  reuse.cpp  reuse.hpp  send_file.cpp  send_file.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  Jamfile  auth.cpp  cookies.cpp  error.cpp  options.cpp  response.cpp  session.cpp
test/cmake_test/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  Jamfile  auth.cpp  body_test.hpp  cookie.cpp  cookie_jar.cpp  cookies.cpp  error.cpp  file.cpp  json.cpp  multipart_form.cpp  options.cpp  response.cpp  session.cpp  string.cpp  urlencoded_form.cpp
